--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "rnpm":{
+    "assets":["./assets/fonts/"]
+  },
   "dependencies": {
+    "eslint": "^5.16.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-native-gesture-handler": "^1.2.0",
+    "react-native-iphone-x-helper": "^1.2.0",
+    "react-native-linear-gradient": "^2.5.4",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.1",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/runtime": "^7.4.5",
+    "@babel/core": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.54.1",
+    "metro-react-native-babel-preset": "^0.54.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
